# recipe-generator

./: .env.example  .gitignore  README.md  create-local-db.sh  docker-compose.yml  package-lock.json  package.json  reset-local-db.sh
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260111000001_create_recipes.sql  20260111000002_add_user_sharing.sql  20260111_001_create_recipes.sql
backend/src/: infrastructure.rs  lib.rs  main.rs  recipes.rs  shared.rs
backend/src/adapters/: api.rs
backend/src/adapters/api/: dto.rs  extractors.rs  handlers.rs  routes.rs  state.rs
backend/src/application/: use_cases.rs
backend/src/application/use_cases/: create_share.rs  delete_share.rs  generate_recipe.rs  get_recipe.rs  list_owned_recipes.rs  list_recipes.rs  list_shared_recipes.rs  save_recipe.rs
backend/src/domain/: entities.rs  repositories.rs  services.rs
backend/src/domain/entities/: recipe.rs  recipe_share.rs
backend/src/domain/repositories/: recipe_repository.rs  recipe_share_repository.rs
backend/src/domain/services/: llm_service.rs
backend/src/infrastructure/: auth.rs  config.rs  llm.rs  repositories.rs
backend/src/infrastructure/auth/: clerk.rs
backend/src/infrastructure/llm/: openai_client.rs
backend/src/infrastructure/repositories/: pg_recipe_repository.rs  pg_recipe_share_repository.rs
backend/src/recipes/: adapters.rs  application.rs  dependencies.rs  domain.rs  infrastructure.rs
backend/src/recipes/adapters/: dto.rs  handlers.rs  openapi.rs  routes.rs  state.rs
backend/src/recipes/application/: create_share.rs  delete_share.rs  generate_recipe.rs  get_recipe.rs  list_owned_recipes.rs  list_recipe_shares.rs  list_shared_recipes.rs  save_recipe.rs
backend/src/recipes/domain/: entities.rs  repositories.rs  services.rs
backend/src/recipes/infrastructure/: openai_client.rs  pg_recipe_repository.rs  pg_recipe_share_repository.rs
backend/src/shared/: app.rs  auth.rs  config.rs  db.rs  middleware.rs  rate_limit.rs
backend/src/shared/middleware/: cors.rs  rate_limit.rs  tracing.rs
backend/tests/: common.rs  integration_test.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  routes.tsx
frontend/src/pages/auth/: SignUpPage.tsx
frontend/src/pages/generate-recipe/: api.ts  index.tsx  types.ts
frontend/src/pages/my-recipes/: index.tsx
frontend/src/pages/saved-recipes/: index.tsx
frontend/src/pages/shared-recipes/: index.tsx
frontend/src/routes/: ProtectedRoute.tsx  ProtectedRoutes.tsx  PublicRoutes.tsx  index.tsx
frontend/src/shared/api/: api-client.ts
frontend/src/shared/components/: AppShell.tsx  Input.tsx  Navigation.tsx  (+4 more)
(+68 files in other folders)
